# API-Gateway-App

./: .gitignore  Makefile  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml  env.example  start-dev.sh  test-infrastructure.sh
api-gateway/: Cargo.toml  Dockerfile
api-gateway/config/: gateway-config.json
api-gateway/src/: auth.rs  config.rs  health.rs  main.rs  metrics.rs  middleware.rs  proxy.rs  rate_limiter.rs
backend/: Dockerfile  auth.py  config.py  database.py  main.py  models.py  requirements.txt  schemas.py  simple_main.py
database/: init.sql
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx
frontend/src/components/: Navbar.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: ApiTester.tsx  Dashboard.tsx  Login.tsx  Metrics.tsx  Orders.tsx  Products.tsx  Users.tsx
secrets/: jwt_secret_key.txt  kong_db_password.txt  postgres_password.txt
